# tidewise

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  secret-scan.yml  security.yml
config/: tidewise.yaml.example
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_history.py  test_models.py  test_notifications.py  test_rules.py  test_solunar.py  test_suggestions.py  test_terminal.py  test_tides.py  test_usgs.py  test_water_temp.py  test_weather.py
tidewise/: __init__.py  cli.py  config.py  history.py  models.py  notifications.py
tidewise/display/: terminal.py
tidewise/scoring/: engine.py  rules.py  suggestions.py
tidewise/sources/: solunar.py  tides.py  usgs.py  water_temp.py  weather.py
