[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tidewise"
version = "0.4.0"
description = "Local-first fishing intelligence — tides, weather, solunar scoring"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.25.0",
    "skyfield>=1.46",
    "rich>=13.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.scripts]
tidewise = "tidewise.cli:main"

[tool.setuptools.packages.find]
include = ["tidewise*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:coroutine 'fetch_water_temp' was never awaited:RuntimeWarning",
    "ignore:coroutine 'fetch_usgs_gauge' was never awaited:RuntimeWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["tidewise"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
